api.yml
apiVersion: v1
kind: Pod
metadata:
 name: curl
spec:
 containers:
 - name: main
   image: docker.io/curlimages/curl
   command: ["sleep", "9999999"]
 - name: ambassador
   image: docker.io/luksa/kubectl-proxy:1.6.2
