cm-nginx.yml
apiVersion: v1
kind: Pod
metadata:
 name: fortune-configmap-volume
spec:
 containers:
 - image: nginx:alpine
   name: web-server
   volumeMounts:
   - name: config
     mountPath: /etc/nginx/conf.d
     readOnly: true
 volumes:
 - name: config
   configMap:
     name: fortune-config
