curl.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: curl
    image: docker.io/curlimages/curl
    command: ["sleep", "9999999999"]
  - name: ambassador 
    image: luksa/kubectl-proxy:1.6.2
  restartPolicy: Always
