downward.yaml
apiVersion: v1
kind: Pod
metadata:
 name: downward
spec:
 containers:
 - name: main
   image: busybox
   command: ["sleep", "9999999"]
