god-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: god-ns

---

apiVersion: v1
kind: Pod
metadata:
  namespace: god-ns
  name: godpod
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "9999999999"]
    imagePullPolicy: Always
  - name: ambassador
    image: luksa/kubectl-proxy:1.6.2
    imagePullPolicy: Always
  restartPolicy: Always
  serviceAccountName: god-sa
