nodeport.yml
apiVersion: v1
kind: Service
metadata:
 name: kubia-nodeport
spec:
 type: NodePort
 ports:
 - port: 80
   targetPort: 8080
   nodePort: 30000
 selector:
   app: kubia
