ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: kubia
spec:
 tls:
 - hosts:
   - bruh.unixmen.local
   secretName: tls-secret
 rules:
 - host: bruh.unixmen.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: kubia-nodeport
           port:
             number: 80
